k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recaudaciones-demo
  namespace: recaudaciones
spec:
  replicas: 3
  selector:
    matchLabels:
      app: recaudaciones-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: recaudaciones-demo
    spec:
      containers:
        - name: recaudaciones-demo
          image: gio0603/reca-web:112e009
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
